# railway_py

./: .gitignore  how_to_create_new_project.md  pyproject.toml  readme.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  transition_graph_reference.md
docs/adr/: 004_exit_node_design.md  005_exit_contract_simplification.md  007_riverboard_pattern.md
docs/errors/: E001.md  E002.md  E003.md  E004.md
issues/: PROGRESS.md
issues/Phase2_正式リリース準備/: 00_DAG実装計画.md  03.1_test_fixtures.md  04_transition_graph_types.md  05_yaml_parser.md  06_graph_validator.md  07_node_outcome.md  08_codegen.md  09_cli_sync.md  10_dag_runner.md  (+8 more)
railway/: __init__.py
test_project/: TUTORIAL.md
test_railway_dev_local/: .gitignore  TUTORIAL.md  TUTORIAL_linear.md  pyproject.toml
tests/: conftest.py
α版_補助ツール(グラフビジュアライザなど）/dag-yaml-tools/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  validate_dag.py  visualize_dag.py
α版_補助ツール(グラフビジュアライザなど）/dag-yaml-tools/docs/: cytoscape-viewer.md
α版_補助ツール(グラフビジュアライザなど）/dag-yaml-tools/examples/: sample.yaml  sample_cytoscape.html
α版_補助ツール(グラフビジュアライザなど）/dag-yaml-tools/src/dag_yaml_tools/: __init__.py  parser.py  validators.py  visualizers.py
α版_補助ツール(グラフビジュアライザなど）/dag-yaml-tools/tests/: __init__.py  conftest.py  test_parser.py  test_validators.py  test_visualizers.py
α版_補助ツール(グラフビジュアライザなど）/dag-yaml-tools/tests/integration/: __init__.py  test_full_workflow.py
α版_補助ツール(グラフビジュアライザなど）/dag-yaml-tools/tests/integration/fixtures/: invalid_cycle.yaml  invalid_undefined.yaml  valid_simple.yaml
設計/: 0_構想.md  1_要件.md  2_仕様.md
(+197 files in other folders)
